# c_cpp_course_project

./: CMakeLists.txt  DevelopmentDocument.md  Matrix.hpp  README.md  SliceTest.cpp  SqrMatrixTest.cpp  TestGithub.md  git操作速查手册.md  main.cpp
matrixLibrary/: ColumnVector.hpp  ComplexMatrix.hpp  Matrix.hpp  Matrix4f.hpp  MatrixArithmetic.hpp  MatrixConvolution.hpp  Reshape.cpp  Reshape.hpp  RowVector.hpp  Slice.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SqrMatrix.hpp  matrixLib.hpp
matrixTest/: ColumnVectorTest.cpp  MatrixConvolutionTest.cpp  RowVectorTest.cpp  SliceTest.cpp  SqrMatrixTest.cpp  VectorTest.cpp
